--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header >  p{
   margin-bottom: 1.3vh;
   text-align:right;
 
-  line-height: 1.6vh;
+  line-height: min(1.6vh,20px);
   font-family: 'Roboto',sans-serif;
   font-weight: 400;
 
