--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ header{
 header > span {
   position: relative; margin-left:1.4%;
   display: inline-block;
-  padding-top: 1%;
+  padding-top: 0.9vh;
   width: 5%;
   font-family:  'Roboto', sans-serif;
   font-weight: 500;
-  font-size: 2em;
+  font-size: 3vh;
   color:#D9D4CC;
   transform: translate(-30%,5%);
 }
@@ -37,15 +37,15 @@ header >  p{
 
   width: 50vw;
   margin-left: 40vw;
-  margin-top: 1.3vh;
-  margin-bottom: 1.3vh;
+  margin-top: min(1.3vh,0.7vw);
+  margin-bottom: min(1.3vh,0.7vw);
   text-align:right;
 
   line-height: min(1.6vh,20px);
   font-family: 'Roboto',sans-serif;
   font-weight: 400;
 
-  font-size: 1vw;
+  font-size: min(0.8vw,1.2vh);
   color:#D9D4CC;
 
 
@@ -128,7 +128,7 @@ hr {
 
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
-  font-size: 80%;
+ font-size: min(2vh,1vw);
   box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.2);
 
 }
